--- a/style/index.css
+++ b/style/index.css
@@ -1,12 +1,20 @@
+* {
+    transition-duration: 0.4s;
+    transition-timing-function: ease-in-out;
+}
+
 a:link {
     color: #414141;
 }
+
 a:visited {
     color: #414141;
 }
+
 a:hover {
     color: #336ca8;
 }
+
 a:active {
-    color: #1c599a;
+    color: #17416d;
 }
