--- a/style/index.css
+++ b/style/index.css
@@ -3,12 +3,16 @@
     transition-timing-function: ease-in-out;
 }
 
+a {
+    text-decoration: none;
+}
+
 a:link {
-    color: #414141;
+    color: #727272;
 }
 
 a:visited {
-    color: #414141;
+    color: #727272;
 }
 
 a:hover {
